<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing">

    <Button
        android:id="@+id/button3"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="105dp"
        android:backgroundTint="#676262"
        android:text="@string/mindful"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="46dp"
        android:backgroundTint="#676262"
        android:text="@string/personality"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="105dp"
        android:backgroundTint="#676262"
        android:text="@string/media"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="192dp"
        android:layout_height="146dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/haven_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/haven" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#676262"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>