<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F6F6F6"
    tools:context=".mindful">

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#676262"
        android:text="@string/back"
        android:onClick="goBackMindful"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="105dp"
        android:backgroundTint="#676262"
        android:text="@string/search"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button7"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="105dp"
        android:backgroundTint="#676262"
        android:text="@string/video"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button8"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="31dp"
        android:backgroundTint="#676262"
        android:text="@string/inspire"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="192dp"
        android:layout_height="146dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/haven_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/haven" />
</androidx.constraintlayout.widget.ConstraintLayout>