<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".personality">

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#676262"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#676262"
        android:text="@string/startTest"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="244dp"
        android:layout_height="51dp"
        android:layout_marginStart="84dp"
        android:backgroundTint="#676262"
        android:text="@string/testInfo"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="192dp"
        android:layout_height="146dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/haven_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/haven" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="322dp"
        android:layout_height="149dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="27dp"
        android:text="@string/persText"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
</androidx.constraintlayout.widget.ConstraintLayout>