<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F6F6F6"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="216dp"
        android:layout_height="210dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="73dp"
        android:contentDescription="@string/haven_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/haven"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="187dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="29dp"
        android:text="@string/home_Quote"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button"
        android:layout_width="201dp"
        android:layout_height="55dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="39dp"
        android:backgroundTint="#676262"
        android:text="@string/get_started"
        android:onClick="getStartedAction"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="UsingOnClickInXml" />
</androidx.constraintlayout.widget.ConstraintLayout>